Adjust formatting of chat messages