@@ -7,18 +7,16 @@ import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.entity.player.PlayerInventory;
 import net.minecraft.entity.vehicle.ChestMinecartEntity;
 import net.minecraft.item.ItemStack;
-import net.minecraft.network.message.MessageType;
-import net.minecraft.network.message.SentMessage;
 import net.minecraft.server.network.ServerPlayerEntity;
 import net.minecraft.server.world.ServerWorld;
 import net.minecraft.text.Text;
-import net.minecraft.text.TextColor;
-import net.minecraft.util.math.Box;
+import net.minecraft.util.Formatting;
 import net.minecraft.util.math.Direction;
 import net.minecraft.util.math.Vec3d;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Locale;
 
 public class GraveManip {
   public static final String GRAVE_ENTITY_TAG = "dev.wateralt.mc.tfa_graves.IsGrave";
@@ -82,22 +80,21 @@ public class GraveManip {
   public static void logGraveCreation(PlayerEntity player) {
     String playerName = player.getName().toString();
     String dimensionName = player.getWorld().getRegistryKey().getValue().toString();
-    
-    String logMsg = "Grave for player %s spawned at (%.1f, %.1f, %.1f) dimension %s".formatted(
-      playerName,
-      player.getX(), player.getY(), player.getZ(),
-      dimensionName);
-    String chatMsg = "Your grave is at (%.1f, %.1f, %.1f) in dimension %s".formatted(
-      player.getX(), player.getY(), player.getZ(),
-      dimensionName);
-    
+    String positionStr = String.format(Locale.ROOT, "(%.1f, %.1f, %.1f)", player.getX(), player.getY(), player.getZ());
+      
+    String logMsg = String.format("Grave for player %s spawned at %s dimension %s", playerName, positionStr, dimensionName);
     GravesMod.getInstance().getLogger().info(logMsg);
+    
+    Text chatText = Text.empty()
+      .styled(style -> style.withColor(0xff8800));
+    List<Text> siblings = chatText.getSiblings();
+    siblings.add(Text.literal("Your grave is at "));
+    siblings.add(Text.literal(positionStr).styled(style -> style.withColor(Formatting.YELLOW)));
+    siblings.add(Text.literal(" in "));
+    siblings.add(Text.literal(dimensionName).styled(style -> style.withColor(Formatting.YELLOW)));
+    
     if(player instanceof ServerPlayerEntity player2) {
-      player2.sendMessageToClient(
-        Text.literal(chatMsg)
-          .styled(style -> style.withColor(0xff8800)),
-        false
-      );
+      player2.sendMessageToClient(chatText, false);
     }
   }
 }
